# formharvester

./: LICENSE  README.md  SeleniumBot.py  bot.py  config.txt  pyproject.toml  remaining_google_pages.json  requirements.txt  utils.py
.github/workflows/: ci.yml  publish.yml
data/: construction_progress_google.txt  lawn_emails.txt  lawn_emails_sources.txt  lawn_progress.txt  lawn_progress_google.txt  mineral_emails.txt  mineral_emails_sources.txt  mineral_progress.txt  mineral_progress_google.txt  pest_emails.txt  pest_emails_sources.txt  pest_progress.txt  pest_progress_google.txt  roofing_emails.txt  roofing_emails_sources.txt  roofing_progress.txt  roofing_progress_google.txt  scraped_emails.txt  website_log.txt
dbc_api_python3/: new_funcaptcha.py  new_recaptcha_token_v3.py
input/: construction.csv  lawn.csv  mineral.csv  pest.csv  roofing.csv
