[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formharvester"
version = "2.2.2"
description = "Automated web form harvesting and submission tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.12"
dependencies = [
    "beautifulsoup4",
    "pandas",
    "pydantic",
    "requests",
    "rich",
    "selenium",
    "tldextract",
    "typer",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]

[tool.hatch.build.targets.wheel]
include = [
    "bot.py",
    "SeleniumBot.py",
    "utils.py",
    "dbc_api_python3/",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
omit = ["tests/*", "dbc_api_python3/*"]

[tool.uv]
package = true
default-groups = ["dev"]
